# wrappers

./: .buildinfo  .coveragrc  .gitignore  README.md  _base_parser.py  _utils.py  crc-idle.py  crc-interactive.py  crc-job-stats.py  crc-proposal-end.py  crc-quota.py  crc-scancel.py  crc-scontrol.py  crc-show-config.py  crc-sinfo.py  crc-squeue.py  crc-sus.py  crc-usage.pl  crc-usage.py  genindex.html  idle.py  index.html  jupyter_labhub_wrap.sh  jupyterhub_service_wrap.sh  objects.inv  py-modindex.html  py3_wrap.sh  py_wrap.sh  pyproject.toml  requirements.txt  scala_wrap.sh  scratch.py  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/apps/: index.doctree
.doctrees/autoapi/apps/_base_parser/: index.doctree
.doctrees/autoapi/apps/_system_info/: index.doctree
.doctrees/autoapi/apps/base_parser/: index.doctree
.doctrees/autoapi/apps/crc_idle/: index.doctree
.doctrees/autoapi/apps/crc_interactive/: index.doctree
.doctrees/autoapi/apps/crc_job_stats/: index.doctree
.doctrees/autoapi/apps/crc_proposal_end/: index.doctree
.doctrees/autoapi/apps/crc_quota/: index.doctree
.doctrees/autoapi/apps/crc_scancel/: index.doctree
.doctrees/autoapi/apps/crc_scontrol/: index.doctree
.doctrees/autoapi/apps/crc_show_config/: index.doctree
.doctrees/autoapi/apps/crc_sinfo/: index.doctree
.doctrees/autoapi/apps/crc_squeue/: index.doctree
.doctrees/autoapi/apps/crc_sus/: index.doctree
.doctrees/autoapi/apps/crc_usage/: index.doctree
.doctrees/autoapi/apps/system_info/: index.doctree
.doctrees/developer_notes/: install.doctree  new_app.doctree
.doctrees/templates/python/: module.doctree
.github/: dependabot.yml
.github/actions/build-sphinx/: action.yml
.github/actions/run-tests/: action.yml
.github/workflows/: CodeQL.yml  DeployDocs.yml  DeployOnRelease.yml  Documentation.yml  DocumentationBuild.yml  DocumentationPublish.yml  PackagePublish.yml  PackageTest.yml  TestDocs.yml  Unittests.yml  UpdateLatest.yml  codeql.yml  update_latest.yml
_modules/: apps.html  index.html
_modules/apps/: _base_parser.html  _system_info.html  base_parser.html  crc_idle.html  crc_interactive.html  crc_job_stats.html  crc_proposal_end.html  crc_quota.html  crc_scancel.html  crc_scontrol.html  crc_show_config.html  crc_sinfo.html  crc_squeue.html  crc_sus.html  crc_usage.html  system_info.html
_sources/: index.rst.txt
_sources/autoapi/apps/: index.rst.txt
_sources/autoapi/apps/_base_parser/: index.rst.txt
_sources/autoapi/apps/_system_info/: index.rst.txt
_sources/autoapi/apps/base_parser/: index.rst.txt
_sources/autoapi/apps/crc_idle/: index.rst.txt
_sources/autoapi/apps/crc_interactive/: index.rst.txt
_sources/developer_notes/: new_app.rst.txt
apps/: __init__.py  _base_parser.py  _system_info.py  base_parser.py  crc-idle.py  crc-interactive.py  crc-job-stats.py  crc-proposal-end.py  crc-quota.py  crc-scancel.py  crc-show-config.py  crc-sinfo.py  crc-squeue.py  crc-sus.py  crc-usage.pl  crc-usage.py  crc_effective.py  crc_idle.py  crc_interactive.py  crc_job_stats.py  crc_priority.py  crc_proposal_end.py  crc_quota.py  crc_scancel.py  crc_scontrol.py  crc_show_config.py  crc_sinfo.py  crc_squeue.py  crc_sus.py  crc_usage.pl  crc_usage.py  system_info.py
apps/utils/: __init__.py  cli.py  keystone.py  seff  system_info.py
autoapi/apps/: index.html
autoapi/apps/_base_parser/: index.html
autoapi/apps/_system_info/: index.html
autoapi/apps/base_parser/: index.html
autoapi/apps/crc_idle/: index.html
autoapi/apps/crc_interactive/: index.html
autoapi/apps/crc_job_stats/: index.html
autoapi/apps/crc_proposal_end/: index.html
autoapi/apps/crc_quota/: index.html
autoapi/apps/crc_scancel/: index.html
autoapi/apps/crc_scontrol/: index.html
autoapi/apps/crc_show_config/: index.html
autoapi/apps/crc_sinfo/: index.html
autoapi/apps/crc_squeue/: index.html
autoapi/apps/crc_sus/: index.html
autoapi/apps/crc_usage/: index.html
autoapi/apps/system_info/: index.html
crc_wrappers/: crc_interactive.py  crc_show_config.py
developer_notes/: install.html  new_app.html
docs/: requirements.txt
docs/source/: conf.py  index.rst  install.rst
docs/source/developer_notes/: install.rst  new_app.rst  release.rst
templates/python/: module.html
tests/: test_crc_idle.py  test_crc_interactive.py  test_crc_job_stats.py  test_crc_proposal_end.py  test_crc_quota.py  test_crc_scancel.py  test_crc_scontrol.py  test_crc_show_config.py  test_crc_sinfo.py  test_crc_squeue.py  test_crc_sus.py  test_crc_usage.py  test_shell.py
tests/fixtures/: __init__.py  sacct_output.py  scontrol_output.py  sinfo_cpu_nodes.py  sinfo_gpu_nodes.py  squeue_output.py
tests/utils/cli/: test_base_parser.py  test_commandline_application.py
tests/utils/cli_apps/: test_base_parser.py  test_commandline_application.py
tests/utils/system_info/: test_shell.py  test_slurm.py
(+12 files in other folders)
